--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>sariqdev</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://anvarnarz.github.io/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="avatar.png">
+    <link rel="icon" href="https://anvarnarz.github.io/avatar.png">
     <script src="https://kit.fontawesome.com/0baaeb83f3.js" crossorigin="anonymous"></script>
   </head>
 
@@ -18,7 +18,7 @@
 
     <div class="wrapper">
       <ul>
-        <li class="sariq"><img src="avatar.png" alt="sariq.dev" style="width:75px;"></li>
+        <li class="sariq"><img src="https://anvarnarz.github.io/avatar.png" alt="sariq.dev" style="width:75px;"></li>
         <li class="telegram"><a href="https://t.me/sariqdev"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a></li>
         <li class="yt"><a href="https://youtube.com/sariqdev"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>
         <li class="facebook"><a href="https://www.facebook.com/sariqdev"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
