--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>sariqdev</title>
-    <link rel="stylesheet" href="https://anvarnarz.github.io/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;800&display=swap" rel="stylesheet">
     <link rel="icon" href="https://anvarnarz.github.io/avatar.png">
+    <link rel="stylesheet" href="https://anvarnarz.github.io/style.css">
     <script src="https://kit.fontawesome.com/0baaeb83f3.js" crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <!--
+      <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;800&display=swap" rel="stylesheet">
+    -->
   </head>
 
   <body>
