Added link to python.sariq.dev

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="container">
         <ul>
-          <li class="python"><a href="#"><i class="fa devicon-python-plain fa-2x" aria-hidden="true"></i></a></li>
+          <li class="python"><a href="https://python.sariq.dev"><i class="fa devicon-python-plain fa-2x" aria-hidden="true"></i></a></li>
         </ul>
       </div>
      
